[package]
name = "axum-project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.41.0", features = ["full"] }
axum = {version = "0.7",features = ["macros"]  }
tower-http = { version = "0.5", features = ["fs"]}
tower-cookies = "0.10"
# Serde / json
serde = { version = "1", features = ["derive"]}
serde_json = "1"
# Others
lazy-regex = "2"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"